welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: '=>' expected but '{' found.
  case (2,2,2) {return 10}
               ^